force-app/main/default/objects/Lead_Status_Transformation__mdt/Lead_Status_Transformation__mdt.object-meta.xml
<CustomObject>
    <label>Lead Status Transformation</label>
    <pluralLabel>Lead Status Transformations</pluralLabel>
</CustomObject>